# Localising_SOZ_from_SPES

./: pyproject.toml
src/: ccep_ecog_dataset.py  ccep_ecog_task.py
src/pyhealth_implementation/: localize_soz.py
