[project]
name = "localising-soz-from-spes"
version = "0.1.0"
description = "SOZ localization from SPES/CCEP ECoG data"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "mne==1.4.2",
    "mne-bids==0.13",
    "numpy==1.25.1",
    "pandas==2.0.3",
    "pyhealth",
    "pyreadr==0.5.0",
    "scikit-learn==1.3.0",
    "torcheeg==1.0.11",
    "tqdm==4.65.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
